--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,4 +10,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> <!-- paras font ni-->
 </html>
